DEEP mode now uses SmartMedicalRouter with 77 APIs from MegaMedicalRegistry - intelligent topic detection

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,39 +1,27 @@
 # ================================
 # Universal Multi-API Backend
-# Dockerfile optimisé multi-stage
+# Dockerfile optimisé
 # ================================
 
-# Stage 1: Builder
-FROM python:3.12-slim as builder
+FROM python:3.12-slim
 
 WORKDIR /app
 
-# Installer les dépendances de build
+# Installer les dépendances système
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copier et installer les dépendances Python
 COPY requirements.txt .
-RUN pip install --no-cache-dir --user -r requirements.txt
-
-# Stage 2: Runtime
-FROM python:3.12-slim as runtime
-
-WORKDIR /app
-
-# Créer un utilisateur non-root
-RUN groupadd -r appuser && useradd -r -g appuser appuser
-
-# Copier les dépendances depuis le builder
-COPY --from=builder /root/.local /root/.local
-ENV PATH=/root/.local/bin:$PATH
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copier le code source
 COPY . .
 
-# Changer le propriétaire des fichiers
-RUN chown -R appuser:appuser /app
+# Créer le dossier data
+RUN mkdir -p /app/data && chmod 777 /app/data
 
 # Variables d'environnement
 ENV PYTHONDONTWRITEBYTECODE=1 \
@@ -44,13 +32,8 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 EXPOSE 8000
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
     CMD curl -f http://localhost:8000/api/health || exit 1
-
-# Utiliser l'utilisateur non-root
-USER appuser
 
 # Commande de démarrage
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
-
-
