--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,6 @@ python-multipart==0.0.6
 
 # AI & LLM
 groq==0.11.0
-cohere==5.11.0
 
 # Database & Cache
 redis==5.0.1
@@ -22,18 +21,7 @@ yfinance==0.2.48
 # Monitoring & Logging
 python-json-logger==2.0.7
 
-# Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-pytest-mock==3.12.0
-
-# Video AI
-TTS==0.22.0  # Coqui TTS (gratuit)
-moviepy==1.0.3
-opencv-python==4.8.1.78
-
-# Rate Limiting (optionnel mais recommandé)
+# Rate Limiting
 slowapi==0.1.9
 
 # Circuit Breaker
