FIX: Ajout DNS Google/Cloudflare pour résoudre problème DNS Fly.io

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,11 +7,15 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-# Installer les dépendances système
+# Installer les dépendances système + configurer DNS
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     curl \
-    && rm -rf /var/lib/apt/lists/*
+    dnsutils \
+    && rm -rf /var/lib/apt/lists/* \
+    && echo "nameserver 8.8.8.8" > /etc/resolv.conf \
+    && echo "nameserver 8.8.4.4" >> /etc/resolv.conf \
+    && echo "nameserver 1.1.1.1" >> /etc/resolv.conf
 
 # Copier et installer les dépendances Python
 COPY requirements.txt .
