--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,15 +7,11 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-# Installer les dépendances système + configurer DNS
+# Installer les dépendances système
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     curl \
-    dnsutils \
-    && rm -rf /var/lib/apt/lists/* \
-    && echo "nameserver 8.8.8.8" > /etc/resolv.conf \
-    && echo "nameserver 8.8.4.4" >> /etc/resolv.conf \
-    && echo "nameserver 1.1.1.1" >> /etc/resolv.conf
+    && rm -rf /var/lib/apt/lists/*
 
 # Copier et installer les dépendances Python
 COPY requirements.txt .
