Migration région Fly.io: cdg (Paris) -> iad (USA) pour résoudre DNS

--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,6 +1,6 @@
 # Fly.io Configuration - Simplifié
 app = "universal-api-hub"
-primary_region = "cdg"
+primary_region = "iad"
 
 [build]
   dockerfile = "Dockerfile"
