CLEAN: Retrait routers problématiques, restauration version stable

--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,6 +1,6 @@
 # Fly.io Configuration - Simplifié
 app = "universal-api-hub"
-primary_region = "iad"
+primary_region = "cdg"
 
 [build]
   dockerfile = "Dockerfile"
