--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ python-dotenv==1.0.0
 pydantic==2.10.0
 pydantic-settings==2.6.0
 httpx==0.27.0
+dnspython==2.6.1
 
 # External APIs
 yfinance==0.2.48
