--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,30 +1,22 @@
-# Fly.io Configuration - Simplifié
-app = "universal-api-hub"
-primary_region = "cdg"
+# fly.toml app configuration file generated for universal-api-hub on 2025-12-09T17:28:15+01:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'universal-api-hub'
+primary_region = 'cdg'
 
 [build]
-  dockerfile = "Dockerfile"
-
-[env]
-  PYTHONUNBUFFERED = "1"
-  ENVIRONMENT = "production"
-  APP_URL = "https://universal-api-hub.fly.dev"
 
 [http_service]
   internal_port = 8000
   force_https = true
-  auto_stop_machines = "stop"
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
-
-  [http_service.concurrency]
-    type = "requests"
-    soft_limit = 200
-    hard_limit = 250
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-  memory = "512mb"
-  cpu_kind = "shared"
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
-
-
